@@ -16,8 +16,6 @@
 
 package org.springframework.util;
 
-import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -25,8 +23,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.ParameterizedClass;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
@@ -45,98 +44,120 @@ import static org.junit.jupiter.params.provider.Arguments.argumentSet;
  */
 class MultiValueMapTests {
 
-	@ParameterizedMultiValueMapTest
-	void add(MultiValueMap<String, String> map) {
-		int initialSize = map.size();
-		map.add("key", "value1");
-		map.add("key", "value2");
-		assertThat(map).hasSize(initialSize + 1);
-		assertThat(map.get("key")).containsExactly("value1", "value2");
-	}
+	@Nested
+	@ParameterizedClass
+	@MethodSource("mapsUnderTest")
+	class ParameterizedMultiValueMapTests {
 
-	@ParameterizedMultiValueMapTest
-	void addIfAbsentWhenAbsent(MultiValueMap<String, String> map) {
-		map.addIfAbsent("key", "value1");
-		assertThat(map.get("key")).containsExactly("value1");
-	}
+		private final MultiValueMap<String, String> map;
 
-	@ParameterizedMultiValueMapTest
-	void addIfAbsentWhenPresent(MultiValueMap<String, String> map) {
-		map.add("key", "value1");
-		map.addIfAbsent("key", "value2");
-		assertThat(map.get("key")).containsExactly("value1");
-	}
+		public ParameterizedMultiValueMapTests(MultiValueMap<String, String> map) {
+			this.map = new LinkedMultiValueMap<>(map);
+		}
 
-	@ParameterizedMultiValueMapTest
-	void set(MultiValueMap<String, String> map) {
-		map.set("key", "value1");
-		map.set("key", "value2");
-		assertThat(map.get("key")).containsExactly("value2");
-	}
+		@Test
+		void add() {
+			int initialSize = map.size();
+			map.add("key", "value1");
+			map.add("key", "value2");
+			assertThat(map).hasSize(initialSize + 1);
+			assertThat(map.get("key")).containsExactly("value1", "value2");
+		}
 
-	@ParameterizedMultiValueMapTest
-	void addAll(MultiValueMap<String, String> map) {
-		int initialSize = map.size();
-		map.add("key", "value1");
-		map.addAll("key", Arrays.asList("value2", "value3"));
-		assertThat(map).hasSize(initialSize + 1);
-		assertThat(map.get("key")).containsExactly("value1", "value2", "value3");
-	}
+		@Test
+		void addIfAbsentWhenAbsent() {
+			map.addIfAbsent("key", "value1");
+			assertThat(map.get("key")).containsExactly("value1");
+		}
 
-	@ParameterizedMultiValueMapTest
-	void addAllWithEmptyList(MultiValueMap<String, String> map) {
-		int initialSize = map.size();
-		map.addAll("key", List.of());
-		assertThat(map).hasSize(initialSize + 1);
-		assertThat(map.get("key")).isEmpty();
-		assertThat(map.getFirst("key")).isNull();
-	}
+		@Test
+		void addIfAbsentWhenPresent() {
+			map.add("key", "value1");
+			map.addIfAbsent("key", "value2");
+			assertThat(map.get("key")).containsExactly("value1");
+		}
 
-	@ParameterizedMultiValueMapTest
-	void getFirst(MultiValueMap<String, String> map) {
-		List<String> values = List.of("value1", "value2");
-		map.put("key", values);
-		assertThat(map.getFirst("key")).isEqualTo("value1");
-		assertThat(map.getFirst("other")).isNull();
-	}
+		@Test
+		void set() {
+			map.set("key", "value1");
+			map.set("key", "value2");
+			assertThat(map.get("key")).containsExactly("value2");
+		}
 
-	@ParameterizedMultiValueMapTest
-	void toSingleValueMap(MultiValueMap<String, String> map) {
-		int initialSize = map.size();
-		List<String> values = List.of("value1", "value2");
-		map.put("key", values);
-		Map<String, String> singleValueMap = map.toSingleValueMap();
-		assertThat(singleValueMap).hasSize(initialSize + 1);
-		assertThat(singleValueMap.get("key")).isEqualTo("value1");
-	}
+		@Test
+		void addAll() {
+			int initialSize = map.size();
+			map.add("key", "value1");
+			map.addAll("key", Arrays.asList("value2", "value3"));
+			assertThat(map).hasSize(initialSize + 1);
+			assertThat(map.get("key")).containsExactly("value1", "value2", "value3");
+		}
 
-	@ParameterizedMultiValueMapTest
-	void toSingleValueMapWithEmptyList(MultiValueMap<String, String> map) {
-		int initialSize = map.size();
-		map.put("key", List.of());
-		Map<String, String> singleValueMap = map.toSingleValueMap();
-		assertThat(singleValueMap).hasSize(initialSize);
-		assertThat(singleValueMap.get("key")).isNull();
-	}
+		@Test
+		void addAllWithEmptyList() {
+			int initialSize = map.size();
+			map.addAll("key", List.of());
+			assertThat(map).hasSize(initialSize + 1);
+			assertThat(map.get("key")).isEmpty();
+			assertThat(map.getFirst("key")).isNull();
+		}
 
-	@ParameterizedMultiValueMapTest
-	void equalsOnExistingValues(MultiValueMap<String, String> map) {
-		map.clear();
-		map.set("key1", "value1");
-		assertThat(map).isEqualTo(map);
-	}
+		@Test
+		void getFirst() {
+			List<String> values = List.of("value1", "value2");
+			map.put("key", values);
+			assertThat(map.getFirst("key")).isEqualTo("value1");
+			assertThat(map.getFirst("other")).isNull();
+		}
 
-	@ParameterizedMultiValueMapTest
-	void equalsOnEmpty(MultiValueMap<String, String> map) {
-		map.clear();
-		map.set("key1", "value1");
-		MultiValueMap<String, String> map1 = new LinkedMultiValueMap<>();
-		map1.set("key1", "value1");
-		assertThat(map1).isEqualTo(map);
-		assertThat(map).isEqualTo(map1);
-		Map<String, List<String>> map2 = Map.of("key1", List.of("value1"));
-		assertThat(map2).isEqualTo(map);
-		assertThat(map).isEqualTo(map2);
+		@Test
+		void toSingleValueMap() {
+			int initialSize = map.size();
+			List<String> values = List.of("value1", "value2");
+			map.put("key", values);
+			Map<String, String> singleValueMap = map.toSingleValueMap();
+			assertThat(singleValueMap).hasSize(initialSize + 1);
+			assertThat(singleValueMap.get("key")).isEqualTo("value1");
+		}
+
+		@Test
+		void toSingleValueMapWithEmptyList() {
+			int initialSize = map.size();
+			map.put("key", List.of());
+			Map<String, String> singleValueMap = map.toSingleValueMap();
+			assertThat(singleValueMap).hasSize(initialSize);
+			assertThat(singleValueMap.get("key")).isNull();
+		}
+
+		@Test
+		void equalsOnExistingValues() {
+			map.clear();
+			map.set("key1", "value1");
+			assertThat(map).isEqualTo(map);
+		}
+
+		@Test
+		void equalsOnEmpty() {
+			map.clear();
+			map.set("key1", "value1");
+			MultiValueMap<String, String> map1 = new LinkedMultiValueMap<>();
+			map1.set("key1", "value1");
+			assertThat(map1).isEqualTo(map);
+			assertThat(map).isEqualTo(map1);
+			Map<String, List<String>> map2 = Map.of("key1", List.of("value1"));
+			assertThat(map2).isEqualTo(map);
+			assertThat(map).isEqualTo(map2);
+		}
+
+		private static Stream<Arguments> mapsUnderTest() {
+			return Stream.of(
+					argumentSet("new LinkedMultiValueMap<>()", new LinkedMultiValueMap<>()),
+					argumentSet("new LinkedMultiValueMap<>(new HashMap<>())", new LinkedMultiValueMap<>(new HashMap<>())),
+					argumentSet("new LinkedMultiValueMap<>(new LinkedHashMap<>())", new LinkedMultiValueMap<>(new LinkedHashMap<>())),
+					argumentSet("new LinkedMultiValueMap<>(Map.of(...))", new LinkedMultiValueMap<>(Map.of("existingkey", List.of("existingvalue1", "existingvalue2")))),
+					argumentSet("CollectionUtils.toMultiValueMap", CollectionUtils.toMultiValueMap(new HashMap<>()))
+			);
+		}
 	}
 
 	@Test
@@ -179,23 +200,6 @@ class MultiValueMapTests {
 		LinkedMultiValueMap<String, String> map = new LinkedMultiValueMap<>();
 		map.put("key1", Arrays.asList("key1.value1", "key1.value2"));
 		return map;
-	}
-
-
-	@Retention(RetentionPolicy.RUNTIME)
-	@ParameterizedTest
-	@MethodSource("mapsUnderTest")
-	@interface ParameterizedMultiValueMapTest {
-	}
-
-	static Stream<Arguments> mapsUnderTest() {
-		return Stream.of(
-				argumentSet("new LinkedMultiValueMap<>()", new LinkedMultiValueMap<>()),
-				argumentSet("new LinkedMultiValueMap<>(new HashMap<>())", new LinkedMultiValueMap<>(new HashMap<>())),
-				argumentSet("new LinkedMultiValueMap<>(new LinkedHashMap<>())", new LinkedMultiValueMap<>(new LinkedHashMap<>())),
-				argumentSet("new LinkedMultiValueMap<>(Map.of(...))", new LinkedMultiValueMap<>(Map.of("existingkey", List.of("existingvalue1", "existingvalue2")))),
-				argumentSet("CollectionUtils.toMultiValueMap", CollectionUtils.toMultiValueMap(new HashMap<>()))
-			);
 	}
 
 }
